--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
     </nav>
-    <h1>Hello, world!</h1>
+    <h1>How Far World</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
